# cxx_course

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp  cmplx.cpp  exampleconf.json  fractal.cpp  polymorph.cpp  tmpltz.cpp
include/advanced_cxx/: bmp.h  bmp_grapher.h  bmp_grapher.pb.h  cmplx_num.h  color_map.h  color_utils.h  fractal.h  fractal.pb.h  img_scaler.h  inherit.h  lib.h  mandelbrot.h  testproto.h  tmpltz.h
include/advanced_cxx/calculators/: mandelbrot.h  pixel_score_calculator.h
include/advanced_cxx/colors/: color_scheme.h
include/advanced_cxx/graphers/: color_utils.h  mandelbrot.h  quadratic.h
src/: CMakeLists.txt  bmp.cpp  bmp_grapher.cpp  bmp_grapher.pb.cpp  bmp_grapher.proto  cmplx_num.cpp  color_map.cpp  color_utils.cpp  fractal.cpp  fractal.pb.cpp  fractal.proto  img_scaler.cpp  inherit.cpp  lib.cpp  mandelbrot.cpp  testproto.cpp  tmpltz.cpp
src/calculators/: mandelbrot.cpp
src/colors/: color_scheme.cpp  color_utils.cpp
src/graphers/: color_utils.cpp  mandelbrot.cpp  quadratic.cpp
tests/: CMakeLists.txt  test1.cpp  test_cmplx_num.cpp
tests/test_graphers/: test_color_utils.cpp
